--- a/Assessment2.html
+++ b/Assessment2.html
@@ -2,7 +2,7 @@
 /**********************************************************************************************************************
 ***         ITC363 assignment 2 HTML document
 ***
-***         Author:             Ian Blott : 11606379
+***         Author:             Ian Blott : 
 ***         Project:            ITC363 Assignemnt 2
 ***         Dev Date:           5/4/2019
 ***         Completion Date:    19/4/2019
